<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".gui.Page6Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/langkah_delapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:textColor="@color/black"
            android:text="@string/langkah_delapan"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/langkah_sembilan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/langkah_sembilan"
            android:textColor="@color/black"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/langkah_delapan"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/ivLangkah_sembilan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/dlapan"
            app:layout_constraintTop_toBottomOf="@id/langkah_sembilan"/>

        <TextView
            android:id="@+id/langkah_sepuluh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/langkah_sepuluh"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLangkah_sembilan" />

        <ImageView
            android:id="@+id/ivLangkah_sepuluh"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/dsembilan"
            app:layout_constraintTop_toBottomOf="@id/langkah_sepuluh"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>